--- a/src/index.html
+++ b/src/index.html
@@ -315,18 +315,6 @@
 
         <h4>Saint Patrick's Hall</h4>
 
-        <figure class="right">
-          <a href="https://en.wikipedia.org/wiki/File:St._Patrick%E2%80%99s_Hall_Dublin_Castle_2014.JPG" target="_blank"
-            rel="noopener noreferrer">
-            <picture>
-              <source media="(min-width: 320px)" srcset="assets/images/640px-St._Patricks_Hall_Dublin_Castle_2014.jpg">
-              <source media="(min-width: 640px)" srcset="assets/images/800px-St._Patricks_Hall_Dublin_Castle_2014.jpg">
-              <img src="assets/images/320px-St._Patricks_Hall_Dublin_Castle_2014.jpg" alt="St. Patrick's Hall">
-            </picture>
-          </a>
-          <figcaption>St. Patrick's Hall</figcaption>
-        </figure>
-
         <p>This is the grandest room of the state apartments, and contains one of the most important decorative
           interiors
           in Ireland. Formerly the ballroom of the Lord Lieutenant's administration, today the room is used for
@@ -348,40 +336,11 @@
 
         <h4>Throne Room</h4>
 
-        <figure class="right">
-          <a href="https://en.wikipedia.org/wiki/File:(Ireland)_Dublin_Castle_Interior_(Throne).jpg" target="_blank"
-            rel="noopener noreferrer">
-            <picture>
-              <source media="(min-width: 320px)"
-                srcset="assets/images/640px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg">
-              <source media="(min-width: 640px)"
-                srcset="assets/images/800px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg">
-              <img src="assets/images/320px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg" alt="Throne Room">
-            </picture>
-          </a>
-          <figcaption>Throne Room</figcaption>
-        </figure>
-
         <p>Originally built as the Battleaxe Hall in the 1740s, it was converted to a presence chamber around 1790. The
           regal decoration dates from that time and from alterations in the 1830s. It contains a throne built for the
           visit of King George IV to Ireland in 1821.</p>
 
         <h4>State Drawing Room</h4>
-
-        <figure class="right">
-          <a href="https://en.wikipedia.org/wiki/File:(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg"
-            target="_blank" rel="noopener noreferrer">
-            <picture>
-              <source media="(min-width: 320px)"
-                srcset="assets/images/640px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg">
-              <source media="(min-width: 640px)"
-                srcset="assets/images/800px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg">
-              <img src="assets/images/320px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg"
-                alt="State Drawing Room">
-            </picture>
-          </a>
-          <figcaption>State Drawing Room</figcaption>
-        </figure>
 
         <p>Remodelled in the 1830s as the principal reception room of the Lord Lieutenant and his household, today this
           room is reserved in use for the reception of foreign dignitaries. Largely destroyed by fire in 1941, the room
@@ -389,18 +348,6 @@
           furnishings and fittings.<a href="#footnote-16"><sup>[16]</sup></a></p>
 
         <h4>State Dining Room</h4>
-
-        <figure class="right">
-          <a href="https://en.wikipedia.org/wiki/File:Dublin_Castle_Portrait_Gallery_2018.jpg" target="_blank"
-            rel="noopener noreferrer">
-            <picture>
-              <source media="(min-width: 320px)" srcset="assets/images/576px-Dublin_Castle_Portrait_Gallery_2018.jpg">
-              <source media="(min-width: 640px)" srcset="assets/images/768px-Dublin_Castle_Portrait_Gallery_2018.jpg">
-              <img src="assets/images/360px-Dublin_Castle_Portrait_Gallery_2018.jpg" alt="State Dining Room">
-            </picture>
-          </a>
-          <figcaption>State Dining Room</figcaption>
-        </figure>
 
         <p>Also called the Picture Gallery, and formerly known as the Supper Room, this is the oldest room in the castle
           and largely retains its original decoration, having escaped major modification and fire over the years. It
@@ -422,20 +369,6 @@
 
         <h4>State Corridor</h4>
 
-        <figure class="right">
-          <a href="https://en.wikipedia.org/wiki/File:(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg"
-            target="_blank" rel="noopener noreferrer">
-            <picture>
-              <source media="(min-width: 320px)"
-                srcset="assets/images/562px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg">
-              <source media="(min-width: 640px)"
-                srcset="assets/images/749px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg">
-              <img src="assets/images/351px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg" alt="State Corridor">
-            </picture>
-          </a>
-          <figcaption>State Corridor</figcaption>
-        </figure>
-
         <p>The most architectural space of the State Apartments, this expressive, deeply modelled corridor, was
           originally built c. 1758 to the designs of the Surveyor General, Thomas Eyre. Based on the early 18th-century
           corridor of
@@ -445,11 +378,95 @@
           the reconstruction of the adjoining drawing room. The corridor features exact plaster casts of the original
           arch detailing, and the original doorcases and fireplaces were salvaged prior to rebuilding.</p>
 
+        <div class="gallery">
+          <figure>
+            <a href="https://en.wikipedia.org/wiki/File:St._Patrick%E2%80%99s_Hall_Dublin_Castle_2014.JPG"
+              target="_blank" rel="noopener noreferrer">
+              <picture>
+                <source media="(min-width: 320px)"
+                  srcset="assets/images/640px-St._Patricks_Hall_Dublin_Castle_2014.jpg">
+                <source media="(min-width: 640px)"
+                  srcset="assets/images/800px-St._Patricks_Hall_Dublin_Castle_2014.jpg">
+                <img src="assets/images/320px-St._Patricks_Hall_Dublin_Castle_2014.jpg" alt="St. Patrick's Hall">
+              </picture>
+            </a>
+            <figcaption>St. Patrick's Hall</figcaption>
+          </figure>
+
+          <figure>
+            <a href="https://en.wikipedia.org/wiki/File:(Ireland)_Dublin_Castle_Interior_(Throne).jpg" target="_blank"
+              rel="noopener noreferrer">
+              <picture>
+                <source media="(min-width: 320px)"
+                  srcset="assets/images/640px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg">
+                <source media="(min-width: 640px)"
+                  srcset="assets/images/800px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg">
+                <img src="assets/images/320px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg" alt="Throne Room">
+              </picture>
+            </a>
+            <figcaption>Throne Room</figcaption>
+          </figure>
+
+          <figure>
+            <a href="https://en.wikipedia.org/wiki/File:(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg"
+              target="_blank" rel="noopener noreferrer">
+              <picture>
+                <source media="(min-width: 320px)"
+                  srcset="assets/images/640px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg">
+                <source media="(min-width: 640px)"
+                  srcset="assets/images/800px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg">
+                <img src="assets/images/320px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg"
+                  alt="State Drawing Room">
+              </picture>
+            </a>
+            <figcaption>State Drawing Room</figcaption>
+          </figure>
+
+          <figure>
+            <a href="https://en.wikipedia.org/wiki/File:Dublin_Castle_Portrait_Gallery_2018.jpg" target="_blank"
+              rel="noopener noreferrer">
+              <picture>
+                <source media="(min-width: 320px)" srcset="assets/images/576px-Dublin_Castle_Portrait_Gallery_2018.jpg">
+                <source media="(min-width: 640px)" srcset="assets/images/768px-Dublin_Castle_Portrait_Gallery_2018.jpg">
+                <img src="assets/images/360px-Dublin_Castle_Portrait_Gallery_2018.jpg" alt="State Dining Room">
+              </picture>
+            </a>
+            <figcaption>State Dining Room</figcaption>
+          </figure>
+
+          <figure>
+            <a href="https://en.wikipedia.org/wiki/File:(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg"
+              target="_blank" rel="noopener noreferrer">
+              <picture>
+                <source media="(min-width: 320px)"
+                  srcset="assets/images/562px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg">
+                <source media="(min-width: 640px)"
+                  srcset="assets/images/749px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg">
+                <img src="assets/images/351px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg"
+                  alt="State Corridor">
+              </picture>
+            </a>
+            <figcaption>State Corridor</figcaption>
+          </figure>
+        </div>
+
         <h3>Towers</h3>
 
         <p>The castle includes towers at two corners; other towers that once existed within the complex.</p>
 
         <h4>Bermingham Tower</h4>
+
+        <figure class="right">
+          <a href="https://en.wikipedia.org/wiki/File:Bermingham_Tower,_Dublin_Castle.jpg" target="_blank"
+            rel="noopener noreferrer">
+            <picture>
+              <source media="(min-width: 320px)" srcset="assets/images/462px-Bermingham_Tower,_Dublin_Castle.jpg">
+              <source media="(min-width: 640px)" srcset="assets/images/616px-Bermingham_Tower,_Dublin_Castle.jpg">
+              <img src="assets/images/289px-Bermingham_Tower,_Dublin_Castle.jpg" alt="Bermingham Tower">
+            </picture>
+          </a>
+          <figcaption>Bermingham Tower</figcaption>
+        </figure>
 
         <p>The base of the original Bermingham Tower is one of the few remaining parts of the original castle. At the
           southwest corner of the castle, the tower has a modern upper part. It is unclear which member of the De
