--- a/src/index.html
+++ b/src/index.html
@@ -212,22 +212,10 @@
           worst castle in the worst situation in
           Christendom".<a href="#footnote-6"><sup>[6]</sup></a></p>
 
-
-
         <p>The Poddle was diverted into the city through archways where the walls adjoined the castle, artificially
           flooding the moat of the fortress's city elevations. One of these archways and part of the wall survive buried
           underneath the 18th-century buildings, and are open for public viewing.<a
             href="#footnote-7"><sup>[7]</sup></a></p>
-
-        <figure class="right">
-          <a href="https://en.wikipedia.org/wiki/File:Castletower.jpg" target="_blank" rel="noopener noreferrer">
-            <picture>
-              <img src="assets/images/Castletower.jpg" alt="The Record Tower">
-            </picture>
-          </a>
-          <figcaption>The Record Tower, the sole surviving tower of the medieval castle dating from c.1228. To its left
-            is the Chapel Royal.</figcaption>
-        </figure>
 
         <p>Through the Middle Ages the wooden buildings within the castle square evolved and changed, the most
           significant addition being the Great Hall built of stone and timber, variously used as Parliament house, court
@@ -454,7 +442,15 @@
 
         <p>The castle includes towers at two corners; other towers that once existed within the complex.</p>
 
-        <h4>Bermingham Tower</h4>
+        <figure class="left">
+          <a href="https://en.wikipedia.org/wiki/File:Castletower.jpg" target="_blank" rel="noopener noreferrer">
+            <picture>
+              <img src="assets/images/Castletower.jpg" alt="The Record Tower">
+            </picture>
+          </a>
+          <figcaption>The Record Tower, the sole surviving tower of the medieval castle dating from c.1228. To its left
+            is the Chapel Royal.</figcaption>
+        </figure>
 
         <figure class="right">
           <a href="https://en.wikipedia.org/wiki/File:Bermingham_Tower,_Dublin_Castle.jpg" target="_blank"
@@ -467,6 +463,8 @@
           </a>
           <figcaption>Bermingham Tower</figcaption>
         </figure>
+
+        <h4>Bermingham Tower</h4>
 
         <p>The base of the original Bermingham Tower is one of the few remaining parts of the original castle. At the
           southwest corner of the castle, the tower has a modern upper part. It is unclear which member of the De
