--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,10 @@
         <a href="https://commons.wikimedia.org/wiki/File:The_Dubhlinn_Gardens_Dublin_Castle_01.JPG" target="_blank"
           rel="noopener noreferrer">
           <picture>
+            <source media="(min-width: 320px)"
+              srcset="assets/images/640px-The_Dubhlinn_Gardens_Dublin_Castle_01.jpg?as=webp" type="image/webp">
+            <source media="(min-width: 640px)"
+              srcset="assets/images/800px-The_Dubhlinn_Gardens_Dublin_Castle_01.jpg?as=webp" type="image/webp">
             <img src="assets/images/320px-The_Dubhlinn_Gardens_Dublin_Castle_01.jpg"
               alt="The Dubhlinn Gardens Dublin Castle">
           </picture>
@@ -34,6 +38,10 @@
         <a href="https://en.wikipedia.org/wiki/File:Open_street_map_central_dublin.svg" target="_blank"
           rel="noopener noreferrer">
           <picture>
+            <source media="(min-width: 320px)"
+              srcset="assets/images/591px-Open_street_map_central_dublin.svg.png?as=webp" type="image/webp">
+            <source media="(min-width: 640px)"
+              srcset="assets/images/738px-Open_street_map_central_dublin.svg.png?as=webp" type="image/webp">
             <img src="assets/images/296px-Open_street_map_central_dublin.svg.png" alt="Open Stree Map Central Dublin">
           </picture>
         </a>
@@ -73,8 +81,10 @@
         <a href="https://en.wikipedia.org/wiki/File:Dublin-Castle-Green-Park-2012.JPG" target="_blank"
           rel="noopener noreferrer">
           <picture>
-            <source media="(min-width: 320px)" srcset="assets/images/640px-Dublin-Castle-Green-Park-2012.jpg">
-            <source media="(min-width: 640px)" srcset="assets/images/800px-Dublin-Castle-Green-Park-2012.jpg">
+            <source media="(min-width: 320px)" srcset="assets/images/640px-Dublin-Castle-Green-Park-2012.jpg?as=webp"
+              type="image/webp">
+            <source media="(min-width: 640px)" srcset="assets/images/800px-Dublin-Castle-Green-Park-2012.jpg?as=webp"
+              type="image/webp">
             <img src="assets/images/320px-Dublin-Castle-Green-Park-2012.jpg"
               alt="Dublin Castle, seen from the park to the south, outside the walls">
           </picture>
@@ -151,6 +161,10 @@
         <figure class="left">
           <a href="https://en.wikipedia.org/wiki/File:Dcastlemaindoor.jpg" target="_blank" rel="noopener noreferrer">
             <picture>
+              <source media="(min-width: 320px)" srcset="assets/images/Dcastlemaindoor.jpg?as=webp&width=640"
+                type="image/webp">
+              <source media="(min-width: 640px)" srcset="assets/images/Dcastlemaindoor.jpg?as=webp&width=800"
+                type="image/webp">
               <img src="assets/images/Dcastlemaindoor.jpg" alt="Entry to the State Aparments">
             </picture>
           </a>
@@ -190,8 +204,10 @@
           <a href="https://en.wikipedia.org/wiki/File:DV405_no.193_Dublin.png" target="_blank"
             rel="noopener noreferrer">
             <picture>
-              <source media="(min-width: 320px)" srcset="assets/images/640px-DV405_no.193_Dublin.png">
-              <source media="(min-width: 640px)" srcset="assets/images/800px-DV405_no.193_Dublin.png">
+              <source media="(min-width: 320px)" srcset="assets/images/640px-DV405_no.193_Dublin.png?as=webp"
+                type="image/webp">
+              <source media="(min-width: 640px)" srcset="assets/images/800px-DV405_no.193_Dublin.png?as=webp"
+                type="image/webp">
               <img src="assets/images/320px-DV405_no.193_Dublin.png" alt="Soldiers at Dublin Castle 1830">
             </picture>
           </a>
@@ -202,8 +218,10 @@
           <a href="https://en.wikipedia.org/wiki/File:Dublin_Castle_and_Black_Pool.jpg" target="_blank"
             rel="noopener noreferrer">
             <picture>
-              <source media="(min-width: 320px)" srcset="assets/images/640px-Dublin_Castle_and_Black_Pool.jpg">
-              <source media="(min-width: 640px)" srcset="assets/images/800px-Dublin_Castle_and_Black_Pool.jpg">
+              <source media="(min-width: 320px)" srcset="assets/images/640px-Dublin_Castle_and_Black_Pool.jpg?as=webp"
+                type="image/webp">
+              <source media="(min-width: 640px)" srcset="assets/images/800px-Dublin_Castle_and_Black_Pool.jpg?as=webp"
+                type="image/webp">
               <img src="assets/images/320px-Dublin_Castle_and_Black_Pool.jpg" alt="Dublin Castle and Black Pool">
             </picture>
           </a>
@@ -268,8 +286,10 @@
           <a href="https://en.wikipedia.org/wiki/File:Dublin_Caste_Guards_circa_1905.jpg" target="_blank"
             rel="noopener noreferrer">
             <picture>
-              <source media="(min-width: 320px)" srcset="assets/images/632px-Dublin_Caste_Guards_circa_1905.jpg">
-              <source media="(min-width: 640px)" srcset="assets/images/789px-Dublin_Caste_Guards_circa_1905.jpg">
+              <source media="(min-width: 320px)" srcset="assets/images/632px-Dublin_Caste_Guards_circa_1905.jpg?as=webp"
+                type="image/webp">
+              <source media="(min-width: 640px)" srcset="assets/images/789px-Dublin_Caste_Guards_circa_1905.jpg?as=webp"
+                type="image/webp">
               <img src="assets/images/316px-Dublin_Caste_Guards_circa_1905.jpg" alt="Dublin Castle Guards circa 1905">
             </picture>
           </a>
@@ -309,8 +329,10 @@
         <figure class="right">
           <a href="https://en.wikipedia.org/wiki/File:DublinCastlePlan2.JPG" target="_blank" rel="noopener noreferrer">
             <picture>
-              <source media="(min-width: 320px)" srcset="assets/images/640px-DublinCastlePlan2.jpg">
-              <source media="(min-width: 640px)" srcset="assets/images/800px-DublinCastlePlan2.jpg">
+              <source media="(min-width: 320px)" srcset="assets/images/640px-DublinCastlePlan2.jpg?as=webp"
+                type="image/webp">
+              <source media="(min-width: 640px)" srcset="assets/images/800px-DublinCastlePlan2.jpg?as=webp"
+                type="image/webp">
               <img src="assets/images/320px-DublinCastlePlan2.jpg" alt="Dublin Castle Plans">
             </picture>
           </a>
@@ -433,9 +455,9 @@
               target="_blank" rel="noopener noreferrer">
               <picture>
                 <source media="(min-width: 320px)"
-                  srcset="assets/images/640px-St._Patricks_Hall_Dublin_Castle_2014.jpg">
+                  srcset="assets/images/640px-St._Patricks_Hall_Dublin_Castle_2014.jpg?as=webp" type="image/webp">
                 <source media="(min-width: 640px)"
-                  srcset="assets/images/800px-St._Patricks_Hall_Dublin_Castle_2014.jpg">
+                  srcset="assets/images/800px-St._Patricks_Hall_Dublin_Castle_2014.jpg?as=webp" type="image/webp">
                 <img src="assets/images/320px-St._Patricks_Hall_Dublin_Castle_2014.jpg" alt="St. Patrick's Hall">
               </picture>
             </a>
@@ -447,9 +469,9 @@
               rel="noopener noreferrer">
               <picture>
                 <source media="(min-width: 320px)"
-                  srcset="assets/images/640px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg">
+                  srcset="assets/images/640px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg?as=webp" type="image/webp">
                 <source media="(min-width: 640px)"
-                  srcset="assets/images/800px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg">
+                  srcset="assets/images/800px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg?as=webp" type="image/webp">
                 <img src="assets/images/320px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg" alt="Throne Room">
               </picture>
             </a>
@@ -461,9 +483,11 @@
               target="_blank" rel="noopener noreferrer">
               <picture>
                 <source media="(min-width: 320px)"
-                  srcset="assets/images/640px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg">
+                  srcset="assets/images/640px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg?as=webp"
+                  type="image/webp">
                 <source media="(min-width: 640px)"
-                  srcset="assets/images/800px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg">
+                  srcset="assets/images/800px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg?as=webp"
+                  type="image/webp">
                 <img src="assets/images/320px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg"
                   alt="State Drawing Room">
               </picture>
@@ -475,8 +499,10 @@
             <a href="https://en.wikipedia.org/wiki/File:Dublin_Castle_Portrait_Gallery_2018.jpg" target="_blank"
               rel="noopener noreferrer">
               <picture>
-                <source media="(min-width: 320px)" srcset="assets/images/576px-Dublin_Castle_Portrait_Gallery_2018.jpg">
-                <source media="(min-width: 640px)" srcset="assets/images/768px-Dublin_Castle_Portrait_Gallery_2018.jpg">
+                <source media="(min-width: 320px)"
+                  srcset="assets/images/576px-Dublin_Castle_Portrait_Gallery_2018.jpg?as=webp" type="image/webp">
+                <source media="(min-width: 640px)"
+                  srcset="assets/images/768px-Dublin_Castle_Portrait_Gallery_2018.jpg?as=webp" type="image/webp">
                 <img src="assets/images/360px-Dublin_Castle_Portrait_Gallery_2018.jpg" alt="State Dining Room">
               </picture>
             </a>
@@ -488,9 +514,11 @@
               target="_blank" rel="noopener noreferrer">
               <picture>
                 <source media="(min-width: 320px)"
-                  srcset="assets/images/562px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg">
+                  srcset="assets/images/562px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg?as=webp"
+                  type="image/webp">
                 <source media="(min-width: 640px)"
-                  srcset="assets/images/749px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg">
+                  srcset="assets/images/749px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg?as=webp"
+                  type="image/webp">
                 <img src="assets/images/351px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg"
                   alt="State Corridor">
               </picture>
@@ -517,8 +545,10 @@
           <a href="https://en.wikipedia.org/wiki/File:Bermingham_Tower,_Dublin_Castle.jpg" target="_blank"
             rel="noopener noreferrer">
             <picture>
-              <source media="(min-width: 320px)" srcset="assets/images/462px-Bermingham_Tower,_Dublin_Castle.jpg">
-              <source media="(min-width: 640px)" srcset="assets/images/616px-Bermingham_Tower,_Dublin_Castle.jpg">
+              <source media="(min-width: 320px)"
+                srcset="assets/images/462px-Bermingham_Tower,_Dublin_Castle.jpg?as=webp" type="image/webp">
+              <source media="(min-width: 640px)"
+                srcset="assets/images/616px-Bermingham_Tower,_Dublin_Castle.jpg?as=webp" type="image/webp">
               <img src="assets/images/289px-Bermingham_Tower,_Dublin_Castle.jpg" alt="Bermingham Tower">
             </picture>
           </a>
