--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
         </a>
       </section>
     </div>
-    <div class="l-main">
+    <div class="l-main--more-v-margin">
       <figure class="h-left">
         <a href="https://en.wikipedia.org/wiki/File:Dublin-Castle-Green-Park-2012.JPG" target="_blank"
           rel="noopener noreferrer">
@@ -453,7 +453,7 @@
           arch detailing, and the original doorcases and fireplaces were salvaged prior to rebuilding.</p>
 
         <div class="m-gallery">
-          <figure>
+          <figure class="m-gallery__figure">
             <a href="https://en.wikipedia.org/wiki/File:St._Patrick%E2%80%99s_Hall_Dublin_Castle_2014.JPG"
               target="_blank" rel="noopener noreferrer">
               <picture>
@@ -467,7 +467,7 @@
             <figcaption>St. Patrick's Hall</figcaption>
           </figure>
 
-          <figure>
+          <figure class="m-gallery__figure">
             <a href="https://en.wikipedia.org/wiki/File:(Ireland)_Dublin_Castle_Interior_(Throne).jpg" target="_blank"
               rel="noopener noreferrer">
               <picture>
@@ -481,7 +481,7 @@
             <figcaption>Throne Room</figcaption>
           </figure>
 
-          <figure>
+          <figure class="m-gallery__figure">
             <a href="https://en.wikipedia.org/wiki/File:(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg"
               target="_blank" rel="noopener noreferrer">
               <picture>
@@ -498,7 +498,7 @@
             <figcaption>State Drawing Room</figcaption>
           </figure>
 
-          <figure>
+          <figure class="m-gallery__figure">
             <a href="https://en.wikipedia.org/wiki/File:Dublin_Castle_Portrait_Gallery_2018.jpg" target="_blank"
               rel="noopener noreferrer">
               <picture>
@@ -512,7 +512,7 @@
             <figcaption>State Dining Room</figcaption>
           </figure>
 
-          <figure>
+          <figure class="m-gallery__figure">
             <a href="https://en.wikipedia.org/wiki/File:(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg"
               target="_blank" rel="noopener noreferrer">
               <picture>
