--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
           <a href="https://commons.wikimedia.org/wiki/File:The_Dubhlinn_Gardens_Dublin_Castle_01.JPG" target="_blank"
             rel="noopener noreferrer">
             <picture>
-              <source media="(min-width: 320px)"
-                srcset="assets/images/640px-The_Dubhlinn_Gardens_Dublin_Castle_01.jpg?as=webp" type="image/webp">
               <source media="(min-width: 640px)"
                 srcset="assets/images/800px-The_Dubhlinn_Gardens_Dublin_Castle_01.jpg?as=webp" type="image/webp">
+              <source media="(min-width: 320px)"
+                srcset="assets/images/640px-The_Dubhlinn_Gardens_Dublin_Castle_01.jpg?as=webp" type="image/webp">
               <img src="assets/images/320px-The_Dubhlinn_Gardens_Dublin_Castle_01.jpg"
                 alt="The Dubhlinn Gardens Dublin Castle">
             </picture>
@@ -35,10 +35,10 @@
           <a href="https://en.wikipedia.org/wiki/File:Open_street_map_central_dublin.svg" target="_blank"
             rel="noopener noreferrer">
             <picture>
-              <source media="(min-width: 320px)"
-                srcset="assets/images/591px-Open_street_map_central_dublin.svg.png?as=webp" type="image/webp">
               <source media="(min-width: 640px)"
                 srcset="assets/images/738px-Open_street_map_central_dublin.svg.png?as=webp" type="image/webp">
+              <source media="(min-width: 320px)"
+                srcset="assets/images/591px-Open_street_map_central_dublin.svg.png?as=webp" type="image/webp">
               <img src="assets/images/296px-Open_street_map_central_dublin.svg.png" alt="Open Stree Map Central Dublin">
             </picture>
           </a>
@@ -124,7 +124,7 @@
           rivers.
           The Poddle today runs under the complex.<a href="#footnote-2"><sup>[2]</sup></a> </p>
 
-        <figure class="h-100w">
+        <figure class="h-w100">
           <a href="https://en.wikipedia.org/wiki/File:Dublin-Castle-Green-Park-2012.JPG" target="_blank"
             rel="noopener noreferrer">
             <picture>
@@ -177,9 +177,9 @@
       <figure class="h-left">
         <a href="https://en.wikipedia.org/wiki/File:Dcastlemaindoor.jpg" target="_blank" rel="noopener noreferrer">
           <picture>
-            <source media="(min-width: 320px)" srcset="assets/images/Dcastlemaindoor.jpg?as=webp&width=640"
-              type="image/webp">
             <source media="(min-width: 640px)" srcset="assets/images/Dcastlemaindoor.jpg?as=webp&width=800"
+              type="image/webp">
+            <source media="(min-width: 320px)" srcset="assets/images/Dcastlemaindoor.jpg?as=webp&width=640"
               type="image/webp">
             <img src="assets/images/Dcastlemaindoor.jpg" alt="Entry to the State Aparments">
           </picture>
@@ -222,9 +222,9 @@
       <figure class="h-left">
         <a href="https://en.wikipedia.org/wiki/File:DV405_no.193_Dublin.png" target="_blank" rel="noopener noreferrer">
           <picture>
-            <source media="(min-width: 320px)" srcset="assets/images/640px-DV405_no.193_Dublin.png?as=webp"
-              type="image/webp">
             <source media="(min-width: 640px)" srcset="assets/images/800px-DV405_no.193_Dublin.png?as=webp"
+              type="image/webp">
+            <source media="(min-width: 320px)" srcset="assets/images/640px-DV405_no.193_Dublin.png?as=webp"
               type="image/webp">
             <img src="assets/images/320px-DV405_no.193_Dublin.png" alt="Soldiers at Dublin Castle 1830">
           </picture>
@@ -236,9 +236,9 @@
         <a href="https://en.wikipedia.org/wiki/File:Dublin_Castle_and_Black_Pool.jpg" target="_blank"
           rel="noopener noreferrer">
           <picture>
-            <source media="(min-width: 320px)" srcset="assets/images/640px-Dublin_Castle_and_Black_Pool.jpg?as=webp"
-              type="image/webp">
             <source media="(min-width: 640px)" srcset="assets/images/800px-Dublin_Castle_and_Black_Pool.jpg?as=webp"
+              type="image/webp">
+            <source media="(min-width: 320px)" srcset="assets/images/640px-Dublin_Castle_and_Black_Pool.jpg?as=webp"
               type="image/webp">
             <img src="assets/images/320px-Dublin_Castle_and_Black_Pool.jpg" alt="Dublin Castle and Black Pool">
           </picture>
@@ -309,9 +309,9 @@
         <a href="https://en.wikipedia.org/wiki/File:Dublin_Caste_Guards_circa_1905.jpg" target="_blank"
           rel="noopener noreferrer">
           <picture>
-            <source media="(min-width: 320px)" srcset="assets/images/632px-Dublin_Caste_Guards_circa_1905.jpg?as=webp"
-              type="image/webp">
             <source media="(min-width: 640px)" srcset="assets/images/789px-Dublin_Caste_Guards_circa_1905.jpg?as=webp"
+              type="image/webp">
+            <source media="(min-width: 320px)" srcset="assets/images/632px-Dublin_Caste_Guards_circa_1905.jpg?as=webp"
               type="image/webp">
             <img src="assets/images/316px-Dublin_Caste_Guards_circa_1905.jpg" alt="Dublin Castle Guards circa 1905">
           </picture>
@@ -354,9 +354,9 @@
       <figure class="h-right">
         <a href="https://en.wikipedia.org/wiki/File:DublinCastlePlan2.JPG" target="_blank" rel="noopener noreferrer">
           <picture>
-            <source media="(min-width: 320px)" srcset="assets/images/640px-DublinCastlePlan2.jpg?as=webp"
-              type="image/webp">
             <source media="(min-width: 640px)" srcset="assets/images/800px-DublinCastlePlan2.jpg?as=webp"
+              type="image/webp">
+            <source media="(min-width: 320px)" srcset="assets/images/640px-DublinCastlePlan2.jpg?as=webp"
               type="image/webp">
             <img src="assets/images/320px-DublinCastlePlan2.jpg" alt="Dublin Castle Plans">
           </picture>
@@ -498,10 +498,10 @@
           <a href="https://en.wikipedia.org/wiki/File:St._Patrick%E2%80%99s_Hall_Dublin_Castle_2014.JPG" target="_blank"
             rel="noopener noreferrer">
             <picture>
-              <source media="(min-width: 320px)"
-                srcset="assets/images/640px-St._Patricks_Hall_Dublin_Castle_2014.jpg?as=webp" type="image/webp">
               <source media="(min-width: 640px)"
                 srcset="assets/images/800px-St._Patricks_Hall_Dublin_Castle_2014.jpg?as=webp" type="image/webp">
+              <source media="(min-width: 320px)"
+                srcset="assets/images/640px-St._Patricks_Hall_Dublin_Castle_2014.jpg?as=webp" type="image/webp">
               <img src="assets/images/320px-St._Patricks_Hall_Dublin_Castle_2014.jpg" alt="St. Patrick's Hall">
             </picture>
           </a>
@@ -512,10 +512,10 @@
           <a href="https://en.wikipedia.org/wiki/File:(Ireland)_Dublin_Castle_Interior_(Throne).jpg" target="_blank"
             rel="noopener noreferrer">
             <picture>
-              <source media="(min-width: 320px)"
-                srcset="assets/images/640px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg?as=webp" type="image/webp">
               <source media="(min-width: 640px)"
                 srcset="assets/images/800px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg?as=webp" type="image/webp">
+              <source media="(min-width: 320px)"
+                srcset="assets/images/640px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg?as=webp" type="image/webp">
               <img src="assets/images/320px-(Ireland)_Dublin_Castle_Interior_(Throne).jpg" alt="Throne Room">
             </picture>
           </a>
@@ -526,11 +526,11 @@
           <a href="https://en.wikipedia.org/wiki/File:(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg"
             target="_blank" rel="noopener noreferrer">
             <picture>
-              <source media="(min-width: 320px)"
-                srcset="assets/images/640px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg?as=webp"
-                type="image/webp">
               <source media="(min-width: 640px)"
                 srcset="assets/images/800px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg?as=webp"
+                type="image/webp">
+              <source media="(min-width: 320px)"
+                srcset="assets/images/640px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg?as=webp"
                 type="image/webp">
               <img src="assets/images/320px-(Ireland)_Dublin_Castle_Interior_(State_Drawing_Room).jpg"
                 alt="State Drawing Room">
@@ -543,10 +543,10 @@
           <a href="https://en.wikipedia.org/wiki/File:Dublin_Castle_Portrait_Gallery_2018.jpg" target="_blank"
             rel="noopener noreferrer">
             <picture>
-              <source media="(min-width: 320px)"
-                srcset="assets/images/576px-Dublin_Castle_Portrait_Gallery_2018.jpg?as=webp" type="image/webp">
               <source media="(min-width: 640px)"
                 srcset="assets/images/768px-Dublin_Castle_Portrait_Gallery_2018.jpg?as=webp" type="image/webp">
+              <source media="(min-width: 320px)"
+                srcset="assets/images/576px-Dublin_Castle_Portrait_Gallery_2018.jpg?as=webp" type="image/webp">
               <img src="assets/images/360px-Dublin_Castle_Portrait_Gallery_2018.jpg" alt="State Dining Room">
             </picture>
           </a>
@@ -557,11 +557,11 @@
           <a href="https://en.wikipedia.org/wiki/File:(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg"
             target="_blank" rel="noopener noreferrer">
             <picture>
-              <source media="(min-width: 320px)"
-                srcset="assets/images/562px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg?as=webp"
-                type="image/webp">
               <source media="(min-width: 640px)"
                 srcset="assets/images/749px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg?as=webp"
+                type="image/webp">
+              <source media="(min-width: 320px)"
+                srcset="assets/images/562px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg?as=webp"
                 type="image/webp">
               <img src="assets/images/351px-(Ireland)_Dublin_Castle_Interior_(State_Corridor).jpg" alt="State Corridor">
             </picture>
@@ -589,9 +589,9 @@
         <a href="https://en.wikipedia.org/wiki/File:Bermingham_Tower,_Dublin_Castle.jpg" target="_blank"
           rel="noopener noreferrer">
           <picture>
-            <source media="(min-width: 320px)" srcset="assets/images/462px-Bermingham_Tower,_Dublin_Castle.jpg?as=webp"
-              type="image/webp">
             <source media="(min-width: 640px)" srcset="assets/images/616px-Bermingham_Tower,_Dublin_Castle.jpg?as=webp"
+              type="image/webp">
+            <source media="(min-width: 320px)" srcset="assets/images/462px-Bermingham_Tower,_Dublin_Castle.jpg?as=webp"
               type="image/webp">
             <img src="assets/images/289px-Bermingham_Tower,_Dublin_Castle.jpg" alt="Bermingham Tower">
           </picture>
